# LabTasks

./: .gitignore
BSU/Java/C1/: settings.gradle
BSU/Java/C2/: build.gradle
BSU/Java/C3/: build.gradle  settings.gradle
BSU/Java/C6/: build.gradle  settings.gradle
BSU/Java/C7/: build.gradle
BSU/Java/C8/: build.gradle  build.xml  settings.gradle
BSU/Java/C8/gradle/: tomcat.gradle
BSU/Java/C9/: build.gradle  settings.gradle
BSU/Java/C9/gradle/: tomcat.gradle
BSU/Java/SimpleJSP/: build.gradle  settings.gradle
BSU/Java/SimpleJSP/.run/: Tomcat 10.1.24.run.xml
BSU/sem1/A2/3.2/: 3.2.cpp
BSU/sem1/A2/4.1/: 4.1.cpp
BSU/sem1/A2/4.2/: 4.2.cpp
BSU/sem1/A2/4.3/: 4.3.cpp
BSU/sem1/A2/5.1/: 5.1.cpp
BSU/sem1/A2/5.2/: 5.2.cpp
BSU/sem1/A2/5.3/: 5.3.cpp
BSU/sem1/A2/5.4/: 5.4.cpp
BSU/sem1/A2/5.5.1/: 5.5.1.cpp
BSU/sem1/A2/5.5.2/: 5.5.2.cpp
BSU/sem1/A2/5.5.3/: 5.5.3.cpp
BSU/sem1/A2/6.1/: 6.1.cpp
BSU/sem1/B10/1.1/: 1.1.cpp
BSU/sem1/B10/1.2/: 1.2.cpp
BSU/sem1/B10/1.3/: 1.3.cpp
BSU/sem1/B10/1.4/: 1.4.cpp
BSU/sem1/B10/1.5/: 1.5.cpp
BSU/sem1/B10/1.6/: 1.6.cpp
BSU/sem1/B10/2.1.1/: 2.1.1.cpp
BSU/sem1/B10/2.1.2/: 2.1.2.cpp
BSU/sem1/B10/2.2/: 2.2.cpp
BSU/sem1/B10/2.3/: 2.3.cpp
BSU/sem1/Unpacker/: Unpacker.cpp
BSU/sem3/Java/: .gitignore
BSU/sem3/МС/: lab1.xlsx  lab2.xlsx  lab3.xlsx  Реферат_экспененциальное_распределение.docx
BSU/sem3/ЧМ/: .gitignore  README.md  Реферат численные методы.docx
BSU/sem3/ЧМ/Z4-GUI/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
BSU/sem3/ЭиМ/: Реферат полевой транзистор.docx
BSU/ИМ/: реферат.docx
BSU/ИМ/lab1/: matrix_equation.m  my_func.m  task5.m
BSU/ИМ/lab2/: task.m
BSU/ИМ/lab3/: task.m
BSU/ИМ/lab4/: task.m
BSU/ИМ/lab5/: task.m
BSU/ИМ/lab6/: task.m
BSU/МК/: лаб1.docx  лаб2-code.docx  лаб2.docx  лаб3.docx  лаб4.docx  лаб5.docx
Json/: json.h
MIPT/2d-spiral/: 2d_spiral.hpp
MIPT/big_integer/: big_integer.cpp  big_integer.hpp
MIPT/bin_search/: bin_search.hpp
MIPT/deque_pt1/: deque.hpp
MIPT/deque_pt2/: deque.hpp
MIPT/factorization/: factorization.hpp
MIPT/list/: list.hpp
MIPT/ring_buffer/: ring_buffer.hpp
MIPT/string/: string.cpp  string.hpp
(+328 files in other folders)
